# jtag-idf-component

./: .gitignore  README.md
.github/workflows/: ci.yml
components/xmos_jtag/: CMakeLists.txt  Kconfig
components/xmos_jtag/include/: swd.h  xmos_jtag.h  xmos_xe.h
components/xmos_jtag/src/: ice40.c  jtag_gpio.c  jtag_parlio.c  jtag_transport.h  svf_player.c  swd.c  xmos_jtag.c  xmos_regs.h  xmos_xe.c
example/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
example/main/: CMakeLists.txt  flash_stub_xs2.xe  flash_stub_xs3.xe  idf_component.yml  index.html  main.c
flash_stub/: README.md  flash_stub.xc
test/: Makefile  test_xe_parser.c
tools/: README.md  xmflash.py
